<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_default_display_jedinice">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_km_milje_titles"
        android:entryValues="@array/pref_km_milje_values"
        android:key="jedinice_razdaljine_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_km_milje" />


    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_litra_galon_titles"
        android:entryValues="@array/pref_litra_galon_values"
        android:key="jedinice_tekucine_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_jedinica" />



    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_obujam_masa_titles"
        android:entryValues="@array/pref_obujam_masa_values"
        android:key="jedinice_obujam_masa_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_jedinica" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_potrosnja_goriva_titles"
        android:entryValues="@array/pref_potrosnja_goriva_values"
        android:key="potrosnja_goriva_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_potrosnja_goriva" />

</PreferenceCategory>

<PreferenceCategory android:title="@string/pref_default_display_formati">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_formati_datum_titles"
        android:entryValues="@array/pref_formati_datum_values"
        android:key="datum_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_formati_datum" />



    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_formati_vrijeme_titles"
        android:entryValues="@array/pref_formati_vrijeme_values"
        android:key="vrijeme_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_formati_vrijeme" />


    <ListPreference
        android:defaultValue="4"
        android:entries="@array/pref_formati_valuta_titles"
        android:entryValues="@array/pref_formati_valuta_values"
        android:key="valuta_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_formati_valuta" />








</PreferenceCategory>

<PreferenceCategory android:title="@string/pref_default_display_prijevodi">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="translate_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"

        android:title="@string/pref_title_prijevod" />
</PreferenceCategory>






<PreferenceCategory android:title="@string/pref_default_display_pomoc_na_cesti">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_number_to_call"
        android:inputType="number"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

</PreferenceCategory>



</PreferenceScreen>
