<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/myPicture"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/applogo"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/izradio"
      android:layout_marginTop="200dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/moje_imePrezime"
        android:layout_marginTop="220dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jmbag_0246046062"
        android:layout_marginTop="240dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/verzija"
        android:layout_marginTop="400dp"/>



</FrameLayout>
