<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    tools:context="com.example.crespo.vehicleexpenses.Activity.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registriraj"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>




    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ime"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lozinka"
        android:inputType="textPassword|number"/>

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ponovi_lozinku_title"
        android:inputType="textPassword|numberPassword" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="@string/registriraj"
        android:layout_marginTop="50dp"
        android:background="#DB674A"
        android:textColor="#FFFFFF" />


</LinearLayout>

</ScrollView>