<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    tools:context="com.example.crespo.vehicleexpenses.Activity.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/help_titile"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_margin="50dp"/>




    <Button
        android:id="@+id/zoviButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_button1_title"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@color/primary6"
        android:textColor="#FFFFFF"/>


    <Button
        android:id="@+id/zoviKarte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/help_button2_title"
        android:background="@color/primary6"
        android:textColor="#FFFFFF"/>

</LinearLayout>
