<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.crespo.vehicleexpenses.Activity.LogInActivity">


    <TextView
        android:id="@+id/textLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prijavi_se"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="100dp"
        android:hint="@string/e_mail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/lozinka"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="@string/prijavi_se"
        android:background="#DB674A"
        android:textColor="#FFFFFF"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:text="@string/registriraj"
        android:background="#DB674A"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />


</LinearLayout>
