<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="50dp"
        android:text="@string/odaberite_jezik"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPurple"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RadioButton
            android:id="@+id/jezik_hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/jezik_hr"
            android:theme="@style/MyRadioButton"/>


        <RadioButton
            android:id="@+id/jezik_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jezik_en"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/MyRadioButton"/>


    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPurple"/>

</LinearLayout>