<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


    <ImageView
        android:id="@+id/pictureProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person_outline" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pictureProfile"
            android:layout_toRightOf="@+id/pictureProfile"
            android:layout_marginStart="10dp"
            android:hint="@string/ime"
            android:inputType="textPersonName" />

    </RelativeLayout>





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <!--

                <ImageView
                    android:id="@+id/pictureEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/at_symbol" />

                <EditText
                    android:id="@+id/editTextEm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pictureEmail"
                    android:layout_toRightOf="@+id/pictureEmail"
                    android:layout_marginStart="10dp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

        -->
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <ImageView
            android:id="@+id/pictureSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_mail_outline" />

        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pictureSubject"
            android:layout_toRightOf="@+id/pictureSubject"
            android:layout_marginStart="10dp"
            android:hint="@string/subjekt"
            android:inputType="textEmailSubject" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <ImageView
            android:id="@+id/pictureMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_text_format" />

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/pictureMessage"
            android:layout_toRightOf="@+id/pictureMessage"
            android:hint="@string/poruka"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="5"
            android:visibility="visible" />

    </RelativeLayout>









</LinearLayout>
</RelativeLayout>